--- a/Documento de Requisitos/base latex.tex
+++ b/Documento de Requisitos/base latex.tex
@@ -69,13 +69,14 @@ O sistema opera com uma máquina servidor que armazena as informações dos usuário
 
 \subsection{Funções do Produto}
 \textbf{
-Gerenciamento de vendas: permitir que o usuário compre SJ de diversas desenvolvedoras;\\\\
-Gerenciamento de usuários: cadastrar, modificar e excluir usuários;\\\\
-Interação entre usuários: comunicação com outros usuários e criação de comunidades. 
+Permitir que o usuário compre SJ de diversas desenvolvedoras;\\\\
+Baixar e atualizar os SJ presentes na biblioteca pessoal do usuário;\\\\
+%Gerenciamento de usuários: cadastrar, modificar e excluir usuários;\\\\
+Comunicação com outros usuários e criação de comunidades. 
 }
 
 \subsection{Características do Usuário}
-\textbf{Os principais usuários são apreciadores e colecionadores que buscam unificar em uma única biblioteca seus SJ.
+\textbf{Os principais usuários são apreciadores e colecionadores que buscam unificar em uma única biblioteca seus SJ e compartilhar experiências com outros usuários.
 }
 
 \subsection{Restrições}
@@ -95,27 +96,28 @@ Como o sistema será desenvolvido em Java, não possuem limitações quanto ao siste
 
 \subsection{Requisitos Funcionais}
 \textbf{
-1.0	- Deve ser capaz de autenticar um usuário através de um identificador;\\
-1.1	- Recuperar do servidor as informações básicas do usuário assim como a sua biblioteca de SJ;\\
+1.0	- Deve ser capaz de autenticar um usuário através de um identificador único;\\
+1.1	- Recuperar do servidor as informações básicas do usuário assim como a sua biblioteca pessoal de SJ e sua lista de amigos;\\
 2.0 - Recuperar do servidor as informações dos SJ presentes na loja online;\\
-2.1 - Navegar pela loja utilizando o sistema;\\
+2.1 - Disponibilizar uma interface que permita ao usuário navegar pela loja utilizando o Sistema;\\
 2.2 - Adicionar itens ao carrinho de compras através da loja do sistema;\\
-2.3 - Manter os itens a serem comprados em um carrinho de compras, até que o usuário complete a compra;\\
+2.3 - Manter os itens adicionados ao carrinho de compras, até que o usuário a finalize;\\
 2.4 - Calcular e exibir o preço total dos itens armazenados no carrinho de compras;\\
-2.5	- Remover itens do carrinho de compras;\\
+2.5 - Remover itens do carrinho de compras;\\
 2.6 - Possibilitar ao usuário pagar a compra com diferentes bandeiras de cartão de crédito;\\
-2.7	- Armazenar na conta do usuário os SJ adquiridos após a confirmação de compra;\\
+2.7 - Ao confirmar o pagamento de uma compra, atualizar a biblioteca pessoal do comprador;\\
 3.0 - Permitir ao usuário adicionar outros usuários através do ID ou nome do outro usuário;\\
-3.1 - Permitir que o usuário converse através de mensagens de texto com outros usuários em tempo real;\\
-3.2 - Permitir ao usuário criar comunidades e adicinar outros usuários a mesma;\\
+3.1 - Permitir que o usuário converse através de mensagens de texto com outros usuários;\\
+3.2 - Criar comunidades e adicinar outros usuários a mesma;\\
+3.3 - Remover comunidades previamente criadas pelo usuário, assim como membros da mesma;\\
+3.4 - Publicar mensagens nas comunidades que o usuário participa;\\
+3.5 - Alterar o status da comunidade entre Pública e Privada;\\
 4.0 - Deve ser capaz de baixar e atualizar os SJ presentes em sua biblioteca pessoal do usuário;\\
 4.1 - Buscar no servidor se o programa instalado na máquina do usuário está atualizado, no momento que o mesmo tentar iniciar o programa;\\
 4.2 - Avisar ao usuário caso o programa esteja desatualizado;\\
-5.0 - Limitar algumas funcionalidades do programa apenas para usuários administradores;\\
-5.1 - Adicionar novos SJ a loja online;\\
-5.2 - Remover SJ presentes na loja online;\\
-5.3 - Alterar informações dos SJ presentes na loja online;\\
-5.4 - Atualizar o servidor após mudanças realizadas na loja online;\\
+5.0 - Limitar algumas funcionalidades do programa apenas para usuários privilegiados;\\
+5.1 - Alterar informações dos SJ presentes na loja online;\\
+5.2 - Atualizar o servidor após mudanças realizadas na loja online;\\
 }
 
 \subsection{Requisitos Não Funcionais}
