--- a/Documento de Requisitos/base latex.tex
+++ b/Documento de Requisitos/base latex.tex
@@ -99,13 +99,14 @@ Como o sistema será desenvolvido em Java, não possuem limitações quanto ao siste
 1.0	- Deve ser capaz de autenticar um usuário através de um identificador único(O);\\
 1.1	- Recuperar do servidor as informações básicas do usuário assim como a sua biblioteca pessoal de SJ e sua lista de amigos(O);\\
 2.0 - Recuperar do servidor as informações dos SJ presentes na loja online(O);\\
-2.1 - Disponibilizar uma interface que permita ao usuário navegar pela loja utilizando o Sistema(E);\\
-2.2 - Adicionar itens ao carrinho de compras através da loja do sistema(E);\\
-2.3 - Manter os itens adicionados ao carrinho de compras, até que o usuário a finalize(E);\\
-2.4 - Calcular e exibir o preço total dos itens armazenados no carrinho de compras(E);\\
-2.5 - Remover itens do carrinho de compras(E);\\
-2.6 - Possibilitar ao usuário pagar a compra com diferentes bandeiras de cartão de crédito(E);\\
-2.7 - Ao confirmar o pagamento de uma compra, atualizar a biblioteca pessoal do comprador(O);\\
+2.1 - Realizar uma busca através de uma palavra chave nos SJ presentes na loja(E);\\
+2.2 - Disponibilizar uma interface que permita ao usuário navegar pela loja utilizando o Sistema(E);\\
+2.3 - Adicionar itens ao carrinho de compras através da loja do sistema(E);\\
+2.4 - Manter os itens adicionados ao carrinho de compras, até que o usuário a finalize(E);\\
+2.5 - Calcular e exibir o preço total dos itens armazenados no carrinho de compras(E);\\
+2.6 - Remover itens do carrinho de compras(E);\\
+2.7 - Possibilitar ao usuário pagar a compra com diferentes bandeiras de cartão de crédito(E);\\
+2.8 - Ao confirmar o pagamento de uma compra, atualizar a biblioteca pessoal do comprador(O);\\
 3.0 - Permitir ao usuário adicionar outros usuários através do ID ou nome do outro usuário(E);\\
 3.1 - Permitir que o usuário converse através de mensagens de texto com outros usuários(E);\\
 3.2 - Criar comunidades e adicinar outros usuários a mesma(E);\\
