Casos de Uso Extendido
Atualização dos casos de uso extendido

--- a/Documento de Requisitos/base latex.tex
+++ b/Documento de Requisitos/base latex.tex
@@ -98,6 +98,7 @@ Como o sistema será desenvolvido em Java, não possuem limitações quanto ao siste
 \textbf{
 1.0	- Deve ser capaz de autenticar um usuário através de um identificador único(O);\\
 1.1	- Recuperar do servidor as informações básicas do usuário assim como a sua biblioteca pessoal de SJ e sua lista de amigos(O);\\
+1.2 - Permitir ao usuário criar uma conta utilizando o sistema.(E)\\
 2.0 - Recuperar do servidor as informações dos SJ presentes na loja online(O);\\
 2.1 - Realizar uma busca através de uma palavra chave nos SJ presentes na loja(E);\\
 2.2 - Disponibilizar uma interface que permita ao usuário navegar pela loja utilizando o Sistema(E);\\
