Casos de Uso Extendido - atualização

--- a/Casos de Uso/base latex.tex
+++ b/Casos de Uso/base latex.tex
@@ -27,6 +27,19 @@ eymarlima@gmail.com\\mortzion@hotmail.com
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Realizar Login no Sistema }\\ \hline
+Atores: & Usuário Comum\\ \hline
+Tipo: & Primário\\ \hline
+Descrição: & O Usuário Comum entra com suas credencias. O sistema autentica as informações e libera o uso do sistema.
+\end{tabular}
+\end{center}
+\end{table}
+%---------------------------------------------------------------%
+
+%---------------------------------------------------------------%
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Criar Conta de Usuário}\\ \hline
 Atores: & Usuário Comum\\ \hline
 Tipo: & Primário\\ \hline
@@ -43,7 +56,7 @@ Descrição: & O usuário introduz os seus dados pessoais. O sistema valida a requi
 Caso de uso: & \textbf{Alterar Informações Pessoais do Usuário}\\ \hline
 Atores: & Usuário Comum\\ \hline
 Tipo: & Secundário\\ \hline
-Descrição: & O usuário escolhe qual informação será altera. Introduz a nova informação. A informação é alterada.
+Descrição: & O Usuário Comum escolhe qual informação será alterada. Introduz a nova informação. A informação é alterada.
 \end{tabular}
 \end{center}
 \end{table}
