Alterações Doc Requisitos, Casos de Uso e Casos de Uso Extendido

--- a/Documento de Requisitos/base latex.tex
+++ b/Documento de Requisitos/base latex.tex
@@ -113,7 +113,7 @@ Como o sistema será desenvolvido em Java, não possuem limitações quanto ao siste
 3.2 - Criar comunidades e adicinar outros usuários a mesma(E);\\
 3.3 - Remover comunidades previamente criadas pelo usuário, assim como membros da mesma(E);\\
 3.4 - Publicar mensagens nas comunidades que o usuário participa(E);\\
-3.5 - Alterar o status da comunidade entre Pública e Privada(E);\\
+3.5 - Alterar informações básicas da comunidade(E);\\
 3.6 - Permitir que o usuário altere informações pessoais(E);\\
 4.0 - Deve ser capaz de baixar e atualizar os SJ presentes em sua biblioteca pessoal do usuário(E);\\
 4.1 - Buscar no servidor se o programa instalado na máquina do usuário está atualizado, no momento que o mesmo tentar iniciar o programa(O);\\
