Alterações Doc Requisitos, Casos de Uso e Casos de Uso Extendido

--- a/Casos de Uso/base latex.tex
+++ b/Casos de Uso/base latex.tex
@@ -132,7 +132,7 @@ Descrição: & O Usuário entra com as informações da comunidade e o sistema cria u
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Adicionar um Usuário a uma Comunidade} \\ \hline
-Atores: & Administrador da Comunidade, Usuário Comum\\ \hline
+Atores: & Administrador da Comunidade, Solicitado\\ \hline
 Tipo: & Primário\\ \hline
 Descrição: & O Administrador da comunidade envia uma solicitação para o Usuário através de uma informação do usuário.
 \end{tabular}
@@ -145,9 +145,9 @@ Descrição: & O Administrador da comunidade envia uma solicitação para o Usuário 
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Remover um Usuário de uma Comunidade} \\ \hline
-Atores: & Administrador da Comunidade, Usuário Comum\\ \hline
+Atores: & Administrador da Comunidade, Membro da Comunidade\\ \hline
 Tipo: & Secundário\\ \hline
-Descrição: & O Administrador da comunidade remove o Usuário. O mesmo deixa de participar da comunidade.
+Descrição: & O Administrador da comunidade remove o Membro da Comunidade. O mesmo deixa de participar da comunidade.
 \end{tabular}
 \end{center}
 \end{table}
@@ -158,9 +158,9 @@ Descrição: & O Administrador da comunidade remove o Usuário. O mesmo deixa de pa
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Publicar Mensagem em uma Comunidade} \\ \hline
-Atores: & Usuário Comum\\ \hline
+Atores: & Membro da Comunidade\\ \hline
 Tipo: & Primário\\ \hline
-Descrição: & O Usuário escolhe uma comunidade. Escreve e publica uma mensagem de texto na mesma.
+Descrição: & O Membro da Comunidade escolhe uma comunidade no qual ele participe. Escreve e publica uma mensagem de texto na mesma.
 \end{tabular}
 \end{center}
 \end{table}
@@ -210,9 +210,9 @@ Descrição: & O Usuário seleciona um software desatualizado. Solicita o download 
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Alterar um produto da loja} \\ \hline
-Atores: & Administrador\\ \hline
+Atores: & Administrador do Sistema\\ \hline
 Tipo: & Primário\\ \hline
-Descrição: & O Administrador escolhe um produto da loja. Escolhe a informação para ser alterada. O Administrador insere as novas informações. A informação é alterada.
+Descrição: & O Administrador do Sistema escolhe um produto da loja. Escolhe a informação para ser alterada. O Administrador do Sistema insere a nova informação. A informação é alterada.
 \end{tabular}
 \end{center}
 \end{table}
