--- a/Casos de Uso - Extendido/base latex.tex
+++ b/Casos de Uso - Extendido/base latex.tex
@@ -78,7 +78,7 @@ Referências Cruzadas: & Requisitos: R1.2
 \hline
 \textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
 \textbf{1. Ao iniciar o sistema o Usuário Comum decide criar uma conta} & \textbf{}\\ \hline
-\textbf{2. O usuário introduz seus dados pessoais: Nome, CPF, e-mail, senha} & \textbf{3. O sistema verifica os dados e registra a conta}\\ \hline
+\textbf{2. O usuário introduz seus dados pessoais: Nome, CPF, e-mail e senha} & \textbf{3. O sistema verifica os dados e registra a conta}\\ \hline
 \end{tabular}
 \end{center}
 
@@ -191,7 +191,7 @@ Atores: & Solicitante(Iniciador), Soliciatado \\ \hline
 Finalidade: & Adcionar um Usuário a lista de amigos\\ \hline
 Visão Geral: & O Solicitante envia um solicitação de amizade para o Solicitado utilizando uma identificação de usuário. O Solicitado aceita a solicitação. Um passa a pertencer a lista de amigos do outro. \\ \hline
 Tipo: & Primário\\ \hline
-Referências Cruzadas:& Requisitos: R3.0.
+Referências Cruzadas:& Requisitos: R3.0
 \end{tabular}
 \end{center}
 \end{table}
@@ -208,9 +208,281 @@ Referências Cruzadas:& Requisitos: R3.0.
 \end{center}
 
 \subsection{Sequências Alternativas:}
-\textbf{Linha 2: O sistema não encontra nenhum usuário com aquela identificação. Exibir um erro.}\\
+\textbf{Linha 2: O Sistema não encontra nenhum usuário com aquela identificação. Exibir um erro de usuário não encontrado.}\\
 \textbf{Linha 5: O Solicitado não aceita a solicitação.}
 %---------------------------------------------------------------%
 
+
+%---------------------------------------------------------------%
+%7
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Envio de Mensagem}\\ \hline
+Atores: & Destinatário, Remetente\\ \hline
+Finalidade: & Envio de mensagens de texto entre usuários\\ \hline
+Visão Geral: & Remetente envia uma mensagem de texto para o Destinatário. O Destinatário recebe a mensagem.\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R3.1
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Remetente escolhe um Destinatário na sua lista de amigos} & \textbf{ }\\ \hline
+\textbf{2. O Remetente escreve uma mensagem de texto} & \textbf{3. O Sistema envia a mensagem de texto para o Destinatário}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%8
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Criar Comunidade}\\ \hline
+Atores: & Usuário Comum\\ \hline
+Finalidade: & Permitir ao Usuário Comum criar uma nova comunidade\\ \hline
+Visão Geral: & O Usuário entra com as informações da comunidade e o sistema cria uma Comunidade.\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R3.2
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Usuário Comum seleciona a opção de criar uma nova comunidade} & \textbf{ }\\ \hline
+\textbf{2. O Usuário Comum introduz as informações básicas da comunidade: Nome, tipo e descrição} & \textbf{3. O Sistema cria a nova comunidade com as informações obtidas}\\ \hline
+\end{tabular}
+\end{center}
+
+\subsection{Sequências Alternativas:}
+\textbf{Linha 3: Já existe uma comunidade com este nome. Solicita que o Usuário Comum introduza um nome diferente.}\\
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%9
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Adicionar um Usuário a uma Comunidade}\\ \hline
+Atores: & Administrador da Comunidade, Solicitado\\ \hline
+Finalidade: & Adicionar novos usuários a uma comunidade específica\\ \hline
+Visão Geral: & O Administrador da comunidade envia uma solicitação para o Usuário através de uma informação do usuário.\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R3.2
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Administrador da Comunidade seleciona a opção de adicionar novos usuários e introduz a identificação única do Solicitado} & \textbf{2. O Sistema busca e exibe as informações do Solicitado}\\ \hline
+\textbf{3. O Administrador da Comunidade envia a solicitação de participação para o Solicitado} & \textbf{4. O Sistema envia uma notificação para o Solicitado}\\ \hline
+\textbf{5. O Solicitado aceita a solicitação de participação} & \textbf{6. O Sistema atualiza a lista de membros da comunidade}\\ \hline
+\end{tabular}
+\end{center}
+
+\subsection{Sequências Alternativas:}
+\textbf{Linha 5: O Solicitado não aceita a solicitação.}\\
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%10
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Remover um Usuário de uma Comunidade}\\ \hline
+Atores: & Administrador da Comunidade, Membro da Comunidade\\ \hline
+Finalidade: & Remover um membro específico da comunidade\\ \hline
+Visão Geral: & O Administrador da comunidade remove o Membro da Comunidade. O mesmo deixa de participar da comunidade.\\ \hline
+Tipo: & Secundário\\ \hline
+Referências Cruzadas: & Requisitos: R3.3
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Administrador da Comunidade seleciona a opção de remover um membro} & \textbf{2. O Sistema lista os membros da comunidade}\\ \hline
+\textbf{3. O Administrador da Comunidade seleciona o membro a ser removido} & \textbf{4. O Sistema remove o membro selecionado da comunidade}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%,
+
+
+%---------------------------------------------------------------%
+%11
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Publicar Mensagem em uma Comunidade}\\ \hline
+Atores: & Membro da Comunidade\\ \hline
+Finalidade: & Possibilitar aos membros da comunidade a opção de postar mensagens\\ \hline
+Visão Geral: & O Membro da Comunidade escolhe uma comunidade no qual ele participe. Escreve e publica uma mensagem de texto na mesma.\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R3.4
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Membro da Comunidade escreve uma mensagem na comunidade} & \textbf{2. O Sistema publica a mensagem escrita pelo Membro da Comunidade}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%12
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Alterar Informações da Comunidade}\\ \hline
+Atores: & Administrador da Comunidade\\ \hline
+Finalidade: & Alterar informações básicas de uma comunidade\\ \hline
+Visão Geral: & O Administrador seleciona uma informação a ser alterada. Insere a nova informação. A informação é alterada.\\ \hline
+Tipo: & Secundário\\ \hline
+Referências Cruzadas: & Requisitos: R3.5
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Administrador da Comunidade escolhe uma informação a ser alterada: Nome, tipo ou descrição} & \textbf{}\\ \hline
+\textbf{2. O Administrador da Comunidade introduz a nova informação da comunidade} & \textbf{3. O Sistema atualiza a nova informação da comunidade}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%13
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Baixar Software e Jogos}\\ \hline
+Atores: & Usuário Comum \\ \hline
+Finalidade: & Transferir o software para o computador do Usuário Comum para que ele possa utiliza-lo \\ \hline
+Visão Geral: & O Usuário seleciona um Software não instalado em
+seu computador. Solicita o download do Software
+ao servidor. O Software é baixado e instalado no computador do Usuario Comum\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R4.0 
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Usuário Comum acessa a sua biblioteca pessoal pelo sistema} & \textbf{}\\ \hline
+\textbf{2. O Usuário Comum seleciona um Software ou Jogo não instalado e requisita o download do mesmo} & \textbf{3. O Sistema faz a transferência do Software ou Jogo para o computador do Usuario Comum e instala no mesmo}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%14
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Atualizar Softwares e Jogos}\\ \hline
+Atores: & Usuário Comum \\ \hline
+Finalidade: & Permitir que os Softwares e Jogos da biblioteca pessoal do Usuário Comum sejam atualizados\\ \hline
+Visão Geral: & O Usuario seleciona um software desatualizado. Solicita
+o download da nova vers~ao do Software ao servidor.
+A nova versão e baixada e instalada. \\ \hline
+Tipo: & Primario\\ \hline
+Referências Cruzadas: & Requisitos:  R4.0, R4.1
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Usuário Comum acessa a funcionalidade de atualização na biblioteca pessoal} & \textbf{2. O Usuário Comum escolhe um Software ou Jogo desatualizado e requisita uma atualização}\\ \hline
+\textbf{3. O Sistema busca a nova versão, realiza o download e instala na máquina do Usuario Comum} & \textbf{}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
+
+
+%---------------------------------------------------------------%
+%15
+\newpage
+\section{Resumo:}
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{p{2.5cm} p{9.5cm}}
+Caso de uso: & \textbf{Alterar um produto da loja}\\ \hline
+Atores: & Administrador do Sistema\\ \hline
+Finalidade: & Permitir corrigir erros ou fazer mudanças em Softwares e Jogos da loja \\ \hline
+Visão Geral: & O Administrador do Sistema escolhe um produto da loja. Escolhe
+a informação para ser alterada. O Administrador do Sistema insere a nova informação. A informação é alterada.\\ \hline
+Tipo: & Primário\\ \hline
+Referências Cruzadas: & Requisitos: R2.0, R5.1, R5.2 
+\end{tabular}
+\end{center}
+\end{table}
+
+\subsection{Sequência Típica de Eventos}
+\begin{center}
+\begin{tabular}{|p{6cm}|p{6cm}|}
+\hline
+\textbf{Ação do Ator} & \textbf{Resposta do Sistema} \\ \hline
+\textbf{1. O Administrador acessa a funcionalidade da loja do sistema} & \textbf{2. O sistema busca todos os softwares pertencentes a loja e os exibe}\\ \hline
+\textbf{3. O Administrador seleciona um software da qual deseja alterar as informações} & \textbf{4. O sistema exibe todas as informações do produto}\\ \hline
+\textbf{5. O Administrador insere as novas informações} & \textbf{6. O Sistema atualiza as informações na loja}\\ \hline
+\end{tabular}
+\end{center}
+%---------------------------------------------------------------%
 
 \end{document}
