--- a/Casos de Uso - Alto Nível/base latex.tex
+++ b/Casos de Uso - Alto Nível/base latex.tex
@@ -145,7 +145,7 @@ Descrição: & O Administrador da comunidade envia uma solicitação para o Usuário 
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Remover um Usuário de uma Comunidade} \\ \hline
-Atores: & Administrador da Comunidade, Membro da Comunidade\\ \hline
+Atores: & Administrador da Comunidade\\ \hline
 Tipo: & Secundário\\ \hline
 Descrição: & O Administrador da comunidade remove o Membro da Comunidade. O mesmo deixa de participar da comunidade.
 \end{tabular}
