--- a/Casos de Uso - Expandido/base latex.tex
+++ b/Casos de Uso - Expandido/base latex.tex
@@ -315,7 +315,7 @@ Referências Cruzadas: & Requisitos: R3.2
 \begin{center}
 \begin{tabular}{p{2.5cm} p{9.5cm}}
 Caso de uso: & \textbf{Remover um Usuário de uma Comunidade}\\ \hline
-Atores: & Administrador da Comunidade, Membro da Comunidade\\ \hline
+Atores: & Administrador da Comunidade\\ \hline
 Finalidade: & Remover um membro específico da comunidade\\ \hline
 Visão Geral: & O Administrador da comunidade remove o Membro da Comunidade. O mesmo deixa de participar da comunidade.\\ \hline
 Tipo: & Secundário\\ \hline
